# Willow

./: .drone.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.txt  Dockerfile  Dockerfile.py2  Dockerfile.py3  MANIFEST.in  README.md  README.rst  docker-test.sh  mkdocs.yml  pyproject.toml  readme.rst  ruff.toml  runtests.py  setup.py
.github/: report_nightly_build_failure.py
.github/workflows/: nightly-test.yml  publish.yml  test.yml
docs/: changelog.md  changelog.rst  concepts.md  concepts.rst  conf.py  guide.rst  index.md  index.rst  installation.md  installation.rst  reference.md  reference.rst  spelling_wordlist.txt
docs/guide/: extend.md  extend.rst  feature_detection.rst  index.rst  open.md  open.rst  operations.md  operations.rst  optimize.rst  resize.rst  save.md  save.rst
tests/: test_ffmpeg.py  test_image.py  test_opencv.py  test_optimizers.py  test_pillow.py  test_pillow_avif_plugin.py  test_registry.py  test_svg_coordinate_transforms.py  test_svg_image.py  test_svglib.py  test_wand.py
tests/images/: tree.avif  tree.heic
willow/: __init__.py  generic_operations.py  image.py  loader.py  registry.py  states.py  svg.py  transform.py
willow/backends/: base.py  opencv.py  pillow.py  wand.py
willow/optimizers/: __init__.py  base.py  cwebp.py  gifsicle.py  jpegoptim.py  optipng.py  pngquant.py
willow/plugins/: ffmpeg.py  opencv.py  optipng.py  pillow.py  svglib.py  wand.py
willow/plugins/opencv/: __init__.py  base.py  opencv2.py  opencv3.py
willow/states/: __init__.py  base.py  buffers.py  files.py  opencv.py  pillow.py  wand.py
willow/utils/: deprecation.py
