[project]
name = "Willow"
description = "A Python image library that sits on top of Pillow, Wand and OpenCV"
authors = [{name = "Karl Hobley", email = "karl@kaed.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Imaging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dynamic = ["version"]  # will read __version__ from willow/__init__.py
requires-python = ">=3.7"
dependencies = [
    "filetype>=1.0.10,!=1.1.0",
    "defusedxml>=0.7,<1.0",
]

[project.optional-dependencies]
testing = [
    "Pillow>=9.1.0,<11.0.0",
    "Wand>=0.6,<1.0",
    "mock>=3.0,<4.0",
    "pillow-heif>=0.7.0,<1.0.0",
    "black==22.3.0",
    "ruff==0.0.275",
]

[project.urls]
Source = "https://github.com/wagtail/Willow"
Changelog = "https://github.com/wagtail/Willow/blob/main/CHANGELOG.txt"


[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "willow"

[tool.flit.sdist]
exclude = [
    ".*",
    "*.json",
    "*.ini",
    "*.sh",
    "*.yml",
    "*.yaml",
    "docs/",
    "tests/",
    "CHANGELOG.txt",
    "Dockerfile.py3",
    "ruff.toml",
    "runtests.py",
]
